--- a/ManejoPresupuesto/ManejoPresupuesto.csproj
+++ b/ManejoPresupuesto/ManejoPresupuesto.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="ClosedXML" Version="0.100.3" />
     <PackageReference Include="Dapper" Version="2.0.123" />
     <PackageReference Include="Microsoft.Data.SqlClient" Version="3.0.1" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
